# mushrooms

./: Makefile  README.md  environment.yml  projet.py  pyproject.toml
Mushrooms/: Makefile  README.md  __init__.py  champignons.csv  dataset.py  environment.yml  plots.py  scraper.py  transforme_dataset.ipynb
Mushrooms/Mushrooms/: dataset.py  features.py
Mushrooms/Mushrooms/modeling/: predict.py  train.py
Mushrooms/modeling/: predict.py  train.py
data/processed/: arbre_decision.dot  dataset.csv  features.csv  labels.csv  predictions.csv
models/: model.pkl
