[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Mushrooms"
version = "0.0.1"
description = "Classification de la cosmetibilit\u00e9 d'un champignon."
authors = [
  { name = "\u007fIlyes GUEBOUL / Liu FRANCOIS" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["Mushrooms"]
force_sort_within_sections = true
